--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Makefile
+linux/Makefile.in
+aclocal.m4
+autom4te.cache/
+config.h
+config.h.in~
+
