--- a/debian_orig/control
+++ b/debian_orig/control
@@ -1,17 +1,16 @@
 Source: vscp-driver-l1-logger
-Section: misc
+Section: utils
 Priority: optional
 Maintainer: Ake Hedman <akhe@grodansparadis.com>
-Build-Depends: debhelper (>= 10)
-Standards-Version: 4.1.2
+Build-Depends: debhelper (>= 11), autotools-dev
+Standards-Version: 4.1.3
 Homepage: https://www.vscp.org
-Vcs-Git: https://github.com/grodansparadis/vscp-driver-l1-logger.git
 Vcs-Browser: https://github.com/grodansparadis/vscp-driver-l1-logger
+Vcs-Git: https://github.com/grodansparadis/vscp-driver-l1-logger.git
 
 Package: vscp-driver-l1-logger
 Architecture: any
-Depends: ${misc:Depends},libc6,libstdc++6,libgcc1
-Description: vscpd level I logger driver
- This is a level I driver that can be used by the vscpd to log vscp
- level 1 events. vscpd is a daemon for the VSCP & Friends m2m/IoT
- package.
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6
+Description: Level I logger driver for the VSCP daemon
+ A driver that can be added to the VSCP server to get logging of level I 
+ events on a specific file. Filters can be set.
