--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -1,15 +1,8 @@
 #!/usr/bin/make -f
-
 # See debhelper(7) (uncomment to enable)
 # output every command that modifies files on the build system.
-DH_VERBOSE = 1
+#export DH_VERBOSE = 1
 
-#  each dh_* command outputs which commands it is executing
-export DH_OPTIONS=-v
-
-	# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/default.mk
 
 # see FEATURE AREAS in dpkg-buildflags(1)
 #export DEB_BUILD_MAINT_OPTIONS = hardening=+all
@@ -20,18 +13,13 @@ include /usr/share/dpkg/default.mk
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
+
 %:
-	dh $@ --with autoreconf
+	dh $@
 
-# If installing an upstream init.d script:
-#override_dh_installinit:
-#	dh_installinit --name=vscpd --onlyscripts
-#	dh_installinit --name=vscpd
 
-configure:
-	dh_autoreconf
-	./configure
-
-#override_dh_auto_install:
-	dh_auto_install -- prefix=/usr
+# dh_make generated override targets
+# This is example for Cmake (See https://bugs.debian.org/641051 )
+#override_dh_auto_configure:
+#	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
 
