Bujild script for debian package is working
Signed-off-by: Ake Hedman, Grodans Paradis AB <akhe@grodansparadis.com>

--- a/debian_orig/control
+++ b/debian_orig/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/grodansparadis/vscp-driver-l1-logger.git
 
 Package: vscp-driver-l1-logger
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libc6
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6 (>= 2.29)
 Description: Level I logger driver for the VSCP daemon
- A driver that can be added to the VSCP server to get logging of level I 
+ A driver that can be added to the VSCP server to get logging of level I
  events on a specific file. Filters can be set.
