--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -1,8 +1,14 @@
 #!/usr/bin/make -f
 # See debhelper(7) (uncomment to enable)
 # output every command that modifies files on the build system.
-#export DH_VERBOSE = 1
+export DH_VERBOSE = 1
 
+#  each dh_* command outputs which commands it is executing
+export DH_OPTIONS=-v
+
+# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
 
 # see FEATURE AREAS in dpkg-buildflags(1)
 #export DEB_BUILD_MAINT_OPTIONS = hardening=+all
@@ -15,11 +21,18 @@
 
 
 %:
-	dh $@
+	dh $@ --with autoreconf
 
 
 # dh_make generated override targets
 # This is example for Cmake (See https://bugs.debian.org/641051 )
 #override_dh_auto_configure:
 #	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+configure:
+	dh_autoreconf
+	./configure
 
+override_dh_auto_install:
+	strip linux/vscpl1drv-logger.so
+	install -D -m 0755 linux/vscpl1drv-logger.so $$(pwd)/debian/vscp-driver-l1-logger/usr/bin/vscpl1drv-logger.so
+#	dh_auto_install --prefix=/usr
