--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -1,10 +1,10 @@
 #!/usr/bin/make -f
 # See debhelper(7) (uncomment to enable)
 # output every command that modifies files on the build system.
-export DH_VERBOSE = 1
+#export DH_VERBOSE = 1
 
 #  each dh_* command outputs which commands it is executing
-export DH_OPTIONS=-v
+#export DH_OPTIONS=-v
 
 # see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
@@ -34,5 +34,5 @@ configure:
 
 override_dh_auto_install:
 	strip linux/vscpl1drv-logger.so
-	install -D -m 0755 linux/vscpl1drv-logger.so $$(pwd)/debian/vscp-driver-l1-logger/usr/bin/vscpl1drv-logger.so
+	install -D -m 0755 linux/vscpl1drv-logger.so $$(pwd)/debian/vscpl1drv-logger/usr/bin/vscpl1drv-logger.so
 #	dh_auto_install --prefix=/usr
