--- a/debian_orig/control
+++ b/debian_orig/control
@@ -10,7 +10,8 @@ Vcs-Git: https://github.com/grodansparadis/vscpl1drv-logger.git
 
 Package: vscpl1drv-logger
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libc6-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6-dev (>= 2.15),
+ libstdc++6 (>= 4.9), libgcc1 (>= 1:4.1.1)
 Description: Level I logger driver for VSCP & friends
  This level I driver that can be added to the VSCP daemon/VSCP Works,
  or other tool that can use VSCP Level I drivers, to get logging of
