--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -3,6 +3,10 @@
 %:
 	dh $@ --with autoreconf
 
+override_dh_shlibdeps:
+	dpkg-shlibdeps -Tdebian/vscpl1drv-logger.substvars $$(pwd)/debian/vscpl1drv-logger%MAJOR-VERSION/usr/lib/%SUBFOLDER/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION
+
+
 override_dh_auto_install:
-	strip linux/vscpl1drv-logger.so
-	install -D -m 0755 linux/vscpl1drv-logger.so $$(pwd)/debian/vscpl1drv-logger/srv/vscp/drivers/level1/vscpl1drv-logger.so
+	strip linux/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION
+
