--- a/linux/Makefile.in
+++ b/linux/Makefile.in
@@ -12,6 +12,7 @@ PACKAGE_VERSION=@PACKAGE_VERSION@
 # STATIC = yes if a static build is requested.
 STATIC=@STATIC@
 VSCP_PROJ_BASE_DIR=@DESTDIR@
+DESTDIR=@DESTDIR@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -22,9 +23,27 @@ top_builddir = @top_builddir@
 CC = @CC@
 CXX = @CXX@
 
-CFLAGS = @CFLAGS@ -fPIC -DCBC -I../_vscp_common_general -I../_vscp_common
-CXXFLAGS = -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@
-CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ -fno-var-tracking-assignments -I../_vscp_common_general -I../_vscp_common
+WARNINGS_HARD = -Werror -Wall -Wextra -pedantic -Wcast-align -Wcast-qual \
+  -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self \
+  -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Wold-style-cast \
+  -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-promo \
+  -Wstrict-null-sentinel -Wstrict-overflow=5 -Wundef -Wno-unused \
+  -Wno-variadic-macros -Wno-parentheses -fdiagnostics-show-option
+WARNINGS_MEDIUM = -Wformat-security -Wformat=2 -Wmissing-include-dirs \
+  -Wno-parentheses -Wformat=2 -Wlogical-op
+WARNINGS = -Wall
+
+VERSION_DEFS = -DMAJOR_VERSION=$(MAJOR_VERSION) -DMINOR_VERSION=$(MINOR_VERSION) \
+	-DRELEASE_VERSION=$(RELEASE_VERSION) -DBUILD_VERSION=$(BUILD_VERSION)
+
+CFLAGS = @CFLAGS@ -fPIC ${WARNINGS} -DCBC \
+	-I../vscp/src/common \
+	-I../vscp/src/vscp/common
+CXXFLAGS = -D__LINUX__ -fPIC ${WARNINGS} -D_REENTRANT @CXXFLAGS@
+CPPFLAGS = -D__LINUX__ -fPIC ${WARNINGS} @CPPFLAGS@ \
+	-fno-var-tracking-assignments \
+	-I../vscp/src/common \
+	-I../vscp/src/vscp/common
 
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
@@ -43,7 +62,9 @@ libdir = ${exec_prefix}/lib
 datadir = ${prefix}/share
 includedir = ${prefix}/include
 DLLPREFIX = lib
-LIB_SONAME = "vscpl1drv-logger"
+
+LIB_PLUS_VER = "vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION).$(RELEASE_VERSION)"
+LIB_SONAME = "vscpl1drv-logger.so.$(MAJOR_VERSION)"
 
 ### Variables: ###
 
@@ -54,31 +75,36 @@ CANALLOGGER_OBJECTS =  vscpl1drv-logger.o\
 
 ### Targets: ###
 
-all: vscpl1drv-logger.so test lib
-
-# static lib
-lib:	vscpl1drv-logger.so
-	ar rcs libvscpl1drv-logger.a $(CANALLOGGER_OBJECTS)
+all: $(LIB_PLUS_VER) ../man/vscpl1drv-logger.1
 
 test:  test.o $(CANALLOGGER_OBJECTS)
 	$(CXX) -o $@ test.o $(CANALLOGGER_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) @LIBS@ $(EXTRALIBS)
+	
 
-vscpl1drv-logger.so: $(CANALLOGGER_OBJECTS)
-	$(CXX) -o $@ $(CANALLOGGER_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) @LIBS@ $(EXTRALIBS)
+$(LIB_PLUS_VER): $(CANALLOGGER_OBJECTS)
+	$(CXX) -Wl,-soname,$(LIB_SONAME)  -o $@ $(CANALLOGGER_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) @LIBS@ $(EXTRALIBS)
+	ar rcs libvscpl1drv-logger.a $(CANALLOGGER_OBJECTS)
 
 log.o: ../common/log.cpp ../common/log.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/log.cpp -o $@
 
-guid.o: ../_vscp_common/guid.cpp ../_vscp_common/guid.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../_vscp_common/guid.cpp -o $@
+guid.o: ../vscp/src/vscp/common/guid.cpp ../vscp/src/vscp/common/guid.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../vscp/src/vscp/common/guid.cpp -o $@
 
-dllist.o: ../_vscp_common_general/dllist.c ../_vscp_common_general/dllist.h
-	$(CC) $(CFLAGS) -c ../_vscp_common_general/dllist.c -o $@
+dllist.o: ../vscp/src/common/dllist.c ../vscp/src/common/dllist.h
+	$(CC) $(CFLAGS) -c ../vscp/src/common/dllist.c -o $@
+
+../man/vscpl1drv-logger.1: ../man/vscpl1drv-logger.1.md
+	pandoc -s -t man ../man/vscpl1drv-logger.1.md -o ../man/vscpl1drv-logger.1
 
 install: all
-	$(STRIP) vscpl1drv-logger.so
-	$(INSTALL_DIR) $(VSCP_PROJ_BASE_DIR)/drivers/level1/
-	$(INSTALL_PROGRAM) vscpl1drv-logger..so $(VSCP_PROJ_BASE_DIR)/drivers/level1/
+	$(INSTALL_DIR) $(DESTDIR)$(libdir)
+	$(STRIP) $(LIB_PLUS_VER)
+	$(INSTALL_PROGRAM) $(LIB_PLUS_VER) $(DESTDIR)$(libdir)
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION)
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION
+	$(INSTALL_PROGRAM) vscpl2drv-logger.a $(DESTDIR)$(libdir)
 
 uninstall: all
 	rm -rf $(VSCP_PROJ_BASE_DIR)/drivers/level1/vscpl1drv-logger.so
@@ -97,8 +123,8 @@ clean:
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
-	rm -f ../_vscp_common_general/*.o
-	rm -f ../_vscp_common/*.o
+	rm -f ../vscp/src/common/*.o
+	rm -f ../vscp/src/vscp/common/*.o
 	rm -f vscpl1drv-logger.so
 	rm -f test
 	rm -f *.gz
