--- a/debian_orig/control
+++ b/debian_orig/control
@@ -1,4 +1,4 @@
-Source: vscpl1drv-logger%MAJOR-VERSION
+Source: vscpl1drv-logger
 Section: utils
 Priority: optional
 Maintainer: Ake Hedman <akhe@grodansparadis.com>
@@ -8,7 +8,7 @@ Homepage: https://www.vscp.org
 Vcs-Browser: https://github.com/grodansparadis/vscpl1drv-logger
 Vcs-Git: https://github.com/grodansparadis/vscpl1drv-logger.git
 
-Package: vscpl1drv-logger%MAJOR-VERSION
+Package: vscpl1drv-logger
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libc6-dev (>= 2.14),
  libstdc++6 (>= 4.9), libgcc1 (>= 1:3.0)
