--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -4,7 +4,7 @@
 	dh $@ --with autoreconf
 
 override_dh_shlibdeps:
-	dpkg-shlibdeps -Tdebian/vscpl1drv-logger.substvars $$(pwd)/debian/vscpl1drv-logger%MAJOR-VERSION/usr/lib/%SUBFOLDER/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION
+	dpkg-shlibdeps -Tdebian/vscpl1drv-logger.substvars $$(pwd)/debian/vscpl1drv-logger/var/lib/vscp/drivers/level1/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION
 
 
 override_dh_auto_install:
