--- a/linux/Makefile.in
+++ b/linux/Makefile.in
@@ -101,7 +101,7 @@ install: all
 	$(INSTALL_PROGRAM) $(LIB_PLUS_VER) $(DESTDIR)$(libdir)
 	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so
 	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION)
-	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION)
 	$(INSTALL_PROGRAM) vscpl2drv-logger.a $(DESTDIR)$(libdir)
 
 uninstall: all
