--- a/linux/Makefile.in
+++ b/linux/Makefile.in
@@ -58,7 +58,8 @@ srcdir = .
 top_srcdir = .
 top_builddir =
 bindir = ${exec_prefix}/bin
-libdir = ${exec_prefix}/lib
+#libdir = ${exec_prefix}/lib
+libdir = /drivers/level1
 datadir = ${prefix}/share
 includedir = ${prefix}/include
 DLLPREFIX = lib
