--- a/linux/Makefile.in
+++ b/linux/Makefile.in
@@ -100,9 +100,9 @@ install: all
 	$(INSTALL_DIR) $(DESTDIR)$(libdir)
 	$(STRIP) $(LIB_PLUS_VER)
 	$(INSTALL_PROGRAM) $(LIB_PLUS_VER) $(DESTDIR)$(libdir)
-	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so
-	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION)
-	ln -fs $(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION)
+	ln -frs $(DESTDIR)$(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so
+	ln -frs $(DESTDIR)$(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION)
+	ln -frs $(DESTDIR)$(libdir)/$(LIB_PLUS_VER) $(DESTDIR)$(libdir)/vscpl1drv-logger.so.$(MAJOR_VERSION).$(MINOR_VERSION)
 	$(INSTALL_PROGRAM) libvscpl1drv-logger.a $(DESTDIR)$(libdir)
 
 uninstall: all
